--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
     </div>
     <div class="card-section">
-        <div class="card">
+        <!-- <div class="card">
             <p class="book-title"> </p>
             <p class="book-author"> </p>
             <p class="book-pages"> </p>
             <p class="book-read"></p>
-        </div>
+        </div> -->
     </div>
 </body>
 <script src="./app.js"></script>
