--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Library App</title>
+    <title>The Cooool Library</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -15,10 +15,10 @@
         </div>
         <div class="search-bar">
             <form class="search-input" action="get">
-                <button><svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                     <path fill="currentColor" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
-                </svg></button>
-                <input type="search" name="search" id="search">
+                </svg>
+                <input type="search" name="search" id="search" placeholder="Search by title or author">
             </form>
             <div class="log-in">
                 <img class="avatar" src="./avatar.svg" alt="avatar">
@@ -56,17 +56,8 @@
             <button class="submit-form" type="submit">Submit</button>
         </form>
     </div>
-    <div class="overlay">
-
-    </div>
-    <div class="card-section">
-        <!-- <div class="card">
-            <p class="book-title"> </p>
-            <p class="book-author"> </p>
-            <p class="book-pages"> </p>
-            <p class="book-read"></p>
-        </div> -->
-    </div>
+    <div class="overlay"></div>
+    <div class="card-section"></div>
 </body>
 <script src="./app.js"></script>
 </html>
