--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             Fill in your 'cooool' library some books by clicking the button.
         </div>
         <div class="button">
-            <button onclick="addBookPopUp()">Add new book</button>
+            <button>Add new book</button>
         </div>
         
     </div>
